# from-scratch

./: .gitignore  README.md
.codex/environments/: environment.toml
3dgss/: PLAN.md  gaussians.py
attention/: PLAN.md  attention.py  pyproject.toml
clip/: README.md  dataset.py  image_encoder.py  loss.py  model.py  notebook.py  pyproject.toml  search.py  sweep.yaml  text_encoder.py  tokenizer.py  train.py  train_sweep.py
dinov2/: PLAN.md
gelu/: PLAN.md  gelu.py  notebook.py  pyproject.toml
position_embedding/: position_embedding.py
resnet/: PLAN.md  pyproject.toml
swiglu/: PLAN.md  notebook.py  pyproject.toml  swiglu-visual.html  swiglu.py
transformers/: PLAN.md  pyproject.toml  transformer.py
vit-mini/: PLAN.md  vit.py
